--- a/Explore/VCSCommitHistory/.VCSCommitHistory.Project.json
+++ b/Explore/VCSCommitHistory/.VCSCommitHistory.Project.json
@@ -1,6 +1,6 @@
 {
   "objectInfo" : {
-    "id" : "0Sc6PEDamsGb2qP05v02Kx",
+    "id" : "7ObzDHkKPQjdXaWLy6Nbim",
     "name" : "VCSCommitHistory",
     "type" : "Project",
     "metadata" : {
