--- a/Explore/BulkUnlinkTestProj1/.BulkUnlink_Mapping_SQL_FF_1.DTEMPLATE.json
+++ b/Explore/BulkUnlinkTestProj1/.BulkUnlink_Mapping_SQL_FF_1.DTEMPLATE.json
@@ -1,6 +1,6 @@
 {
   "objectInfo" : {
-    "id" : "ixpSksYWhwpi07KgW0s9EY",
+    "id" : "4yqMJ3hSggfcDGMlqBUMi0",
     "name" : "BulkUnlink_Mapping_SQL_FF_1",
     "type" : "DTEMPLATE",
     "metadata" : {
@@ -9,7 +9,7 @@
         "minor" : 0
       },
       "repoInfo" : {
-        "repoHandle" : "01001O17000000000EOM"
+        "repoHandle" : "01001O17000000000EXO"
       },
       "contextAttributes" : [ {
         "name" : "id",
