--- a/Explore/BulkUnlinkTestProj2/.BulkUnlink_Mapping.DTEMPLATE.json
+++ b/Explore/BulkUnlinkTestProj2/.BulkUnlink_Mapping.DTEMPLATE.json
@@ -1,6 +1,6 @@
 {
   "objectInfo" : {
-    "id" : "0wCeTx4IUmyghCPAha2CA7",
+    "id" : "6lLkXm6kigcgdUhlq4ijMp",
     "name" : "BulkUnlink_Mapping",
     "type" : "DTEMPLATE",
     "metadata" : {
@@ -9,7 +9,7 @@
         "minor" : 0
       },
       "repoInfo" : {
-        "repoHandle" : "01001O17000000000EOS"
+        "repoHandle" : "01001O17000000000EXU"
       },
       "contextAttributes" : [ {
         "name" : "id",
