--- a/Explore/BulkUnlinkTestProj3/.BulkUnlink_Mapping.DTEMPLATE.json
+++ b/Explore/BulkUnlinkTestProj3/.BulkUnlink_Mapping.DTEMPLATE.json
@@ -1,6 +1,6 @@
 {
   "objectInfo" : {
-    "id" : "7RFv7vjyAsabQyanGpkImm",
+    "id" : "6eog7UrNuUof4UF8UxCXWM",
     "name" : "BulkUnlink_Mapping",
     "type" : "DTEMPLATE",
     "metadata" : {
@@ -9,7 +9,7 @@
         "minor" : 0
       },
       "repoInfo" : {
-        "repoHandle" : "01001O17000000000EOQ"
+        "repoHandle" : "01001O17000000000EXT"
       },
       "contextAttributes" : [ {
         "name" : "id",
