--- a/Explore/BulkUnlinkTestProj3/.BulkUnlink_Mapping_SQL_FF_1.DTEMPLATE.json
+++ b/Explore/BulkUnlinkTestProj3/.BulkUnlink_Mapping_SQL_FF_1.DTEMPLATE.json
@@ -1,6 +1,6 @@
 {
   "objectInfo" : {
-    "id" : "gEWyrFT244Igt20WNoro2H",
+    "id" : "dlfSPQ4fIQrcJ5I7zFzy2S",
     "name" : "BulkUnlink_Mapping_SQL_FF_1",
     "type" : "DTEMPLATE",
     "metadata" : {
@@ -9,7 +9,7 @@
         "minor" : 0
       },
       "repoInfo" : {
-        "repoHandle" : "01001O17000000000EOP"
+        "repoHandle" : "01001O17000000000EXS"
       },
       "contextAttributes" : [ {
         "name" : "id",
