Multi checkin assets
Description for Multi checkin assets

--- a/Explore/VCS_DisableVersioningTest/.VCS_DisableVersioningTest.Project.json
+++ b/Explore/VCS_DisableVersioningTest/.VCS_DisableVersioningTest.Project.json
@@ -1,6 +1,6 @@
 {
   "objectInfo" : {
-    "id" : "4NkPj5o7XA8e9zF8C0oVoR",
+    "id" : "8CiYLqwQqcXgDDhVJJhGUy",
     "name" : "VCS_DisableVersioningTest",
     "type" : "Project",
     "metadata" : {
