--- a/Explore/VCS_PROJ_AUTO/.VCS_Asset_MCT_Mapping_SQL_FF_1.MTT.json
+++ b/Explore/VCS_PROJ_AUTO/.VCS_Asset_MCT_Mapping_SQL_FF_1.MTT.json
@@ -1,6 +1,6 @@
 {
   "objectInfo" : {
-    "id" : "7IUjs7GOS8LiTlJ7Qa44sO",
+    "id" : "9Yj9OBUv1iWkZmB3kFDMEo",
     "name" : "VCS_Asset_MCT_Mapping_SQL_FF_1",
     "type" : "MTT",
     "metadata" : {
@@ -9,14 +9,14 @@
         "minor" : 0
       },
       "repoInfo" : {
-        "repoHandle" : "0106090Z0000000007KL"
+        "repoHandle" : "0106090Z0000000007LO"
       },
       "contextAttributes" : [ {
         "name" : "id",
         "value" : "@1"
       } ],
       "additionalInfo" : {
-        "description" : "Updated Desc",
+        "description" : "Uses PC_Mapping_SQL_FF_1\r\n",
         "contentType" : "JSON",
         "documentState" : "VALID"
       }
