Automation summary for Force Undo Checkout testsMDE1Y2VjMTctMTY0Yi00MD
Automation Desc:Force Undo Checkout test

--- a/Explore/VCS_ForceUndoCheckoutTest/.VCS_ForceUndoCheckoutTest.Project.json
+++ b/Explore/VCS_ForceUndoCheckoutTest/.VCS_ForceUndoCheckoutTest.Project.json
@@ -1,6 +1,6 @@
 {
   "objectInfo" : {
-    "id" : "g0MCeE6Kv2tdSujwYWfRu8",
+    "id" : "f1MlmIxCIgTdvIzMH8xfEk",
     "name" : "VCS_ForceUndoCheckoutTest",
     "type" : "Project",
     "metadata" : {
