Multi checkin assets
Description for Multi checkin assets

--- a/Explore/VCS_DisableVersioningTest/.VCS_DisableVersioningTest.Project.json
+++ b/Explore/VCS_DisableVersioningTest/.VCS_DisableVersioningTest.Project.json
@@ -1,6 +1,6 @@
 {
   "objectInfo" : {
-    "id" : "4s3bs65J6Makh8p5wKt4mO",
+    "id" : "6KyZjiOYOIMizdaZct7Psn",
     "name" : "VCS_DisableVersioningTest",
     "type" : "Project",
     "metadata" : {
