Automation summary for Force Undo Checkout testsZTcyMDA2MWYtMWZmZi00MD
Automation Desc:Force Undo Checkout test

--- a/Explore/VCS_ForceUndoCheckoutTest/.VCS_ForceUndoCheckoutTest.Project.json
+++ b/Explore/VCS_ForceUndoCheckoutTest/.VCS_ForceUndoCheckoutTest.Project.json
@@ -1,6 +1,6 @@
 {
   "objectInfo" : {
-    "id" : "f1MlmIxCIgTdvIzMH8xfEk",
+    "id" : "46pQFgSWTKXlKqKv9U9Deu",
     "name" : "VCS_ForceUndoCheckoutTest",
     "type" : "Project",
     "metadata" : {
