Automation summary for Force Undo Checkout testsNmQ3ODhkOGUtM2U2MC00Yz
Automation Desc:Force Undo Checkout test

--- a/Explore/VCS_ForceUndoCheckoutTest/.VCS_ForceUndoCheckoutTest.Project.json
+++ b/Explore/VCS_ForceUndoCheckoutTest/.VCS_ForceUndoCheckoutTest.Project.json
@@ -1,6 +1,6 @@
 {
   "objectInfo" : {
-    "id" : "46pQFgSWTKXlKqKv9U9Deu",
+    "id" : "bqw5OgylocUiDqLT8ZjcS4",
     "name" : "VCS_ForceUndoCheckoutTest",
     "type" : "Project",
     "metadata" : {
