Automation summary for Force Undo Checkout testsMmQyZTBmMjItNTkwNC00ZT
Automation Desc:Force Undo Checkout test

--- a/Explore/VCS_ForceUndoCheckoutTest/.VCS_ForceUndoCheckoutTest.Project.json
+++ b/Explore/VCS_ForceUndoCheckoutTest/.VCS_ForceUndoCheckoutTest.Project.json
@@ -1,6 +1,6 @@
 {
   "objectInfo" : {
-    "id" : "bqw5OgylocUiDqLT8ZjcS4",
+    "id" : "3fxpr2z2cQejtkI9M0k2YP",
     "name" : "VCS_ForceUndoCheckoutTest",
     "type" : "Project",
     "metadata" : {
